content/plataformes/canigo/entorn-de-desenvolupament/arquetip-maven/anteriors-versions/1.7.5/llistat-de-canvis.md
+++
date        = "2022-06-27"
title       = "Llistat de canvis"
description = "Llistat de canvis arquetip maven 1.7.5"
sections    = "canigo-fwk-docs"
weight		= 1
+++

## Arquetip maven 1.7.5

**27/06/2022**:

- Incorporació dependències addicionals per a configurar un origen de dades JDBC: `org.apache.commons.commons-dbcp2` i `org.apache.commons.commons-pool2`.

**23/05/2022**:

- [Actualització de l’_archetype_ 1.7.5 i del _plugin_ Eclipse 1.8.5](/noticies/2022-05-23-CAN-Actualitzacio_archetype_1_7_5_plugin_eclipse_1_8_5/)
   - Actualització de l’_archetype_ versió 1.7.5 i del _plugin_ de l'Eclipse de Canigó versió 1.8.5 per a generar projectes amb Canigó 3.6.5.

## Arquetip maven 1.7.4

- [Actualització de l’_archetype_ 1.7.4 i del _plugin_ Eclipse 1.8.4](/noticies/2022-04-13-CAN-Actualitzacio_archetype_1_7_4_plugin_eclipse_1_8_4)
   - Actualització de l’_archetype_ versió 1.7.4 i del _plugin_ de l'Eclipse de Canigó versió 1.8.4 per a generar projectes amb Canigó 3.6.4.

## Arquetip maven 1.7.3

- [Actualització de l’_archetype_ 1.7.3 i del _plugin_ Eclipse 1.8.3](/noticies/2021-12-27-CAN-Actualitzacio_archetype_1_7_3_plugin_eclipse_1_8_3)
   - Actualització de l’_archetype_ versió 1.7.3 i del _plugin_ de l'Eclipse de Canigó versió 1.8.3 per a generar projectes amb Canigó 3.6.3.

## Arquetip maven 1.7.2

- [Actualització de l’_archetype_ 1.7.2 i del _plugin_ Eclipse 1.8.2](/noticies/2021-12-17-CAN-Actualitzacio_archetype_1_7_2_plugin_eclipse_1_8_2)
   - Actualització de l’_archetype_ versió 1.7.2 i del _plugin_ de l'Eclipse de Canigó versió 1.8.2 per a generar projectes amb Canigó 3.6.2.

## Arquetip maven 1.7.1

- [Resolució de vulnerabilitat Log4Shell](/noticies/2021-12-13-CAN-actualitzacio-canigo-3_4_7_3_6_1/)
   - Actualització de tots els mòduls de Canigó per a utilitzar la versió 2.15.0 de log4j

## Arquetip maven 1.7.0

- [Actualització de l’_archetype_ 1.7.0 i del _plugin_ Eclipse 1.8.0](/noticies/2021-10-25-CAN-Actualitzacio_archetype_1_7_0_plugin_eclipse_1_8_0)
   - Actualització de l’_archetype_ versió 1.7.0 i del _plugin_ de l'Eclipse de Canigó versió 1.8.0 per a generar projectes amb Canigó 3.6.0.